# OmniQuant

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_RESPONSE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  FINAL_STATUS.md  FIXES_IMPLEMENTED.md  GETTING_STARTED.md  IMPROVEMENTS_COMPLETE.md  LICENSE  MVP_FEATURE_STATUS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  PRODUCTION_TRANSFORMATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_FINAL.md  README_UPDATED.md  START_HERE.md  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
BOOK-APP/: .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  COMMANDS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FEATURES.md  FINAL_SUMMARY.md  FIXES_AND_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  INSTALLATION_GUIDE.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_COMPLETE.md  START_HERE.md  app.json  babel.config.js  eas.json  jest.config.js  jest.setup.js  jest.setup.ts  package.json  tsconfig.json
BOOK-APP/docs/: API.md  ARCHITECTURE.md  PRD.md  ROLE_PROMPTS.md  SETUP.md  WIREFRAMES.md
BOOK-APP/supabase/: config.toml
configs/: config.yaml
docs/: ARCHITECTURE.md  QUICKSTART.md
examples/: simple_backtest.py
frontend/: package.json
k8s/: deployment.yaml
native/oms-core/: Cargo.toml
native/oms-core/src/: lib.rs
notebooks/: AlphaResearch_Example.py
src/: __init__.py  cli.py  integration.py
src/alpha_models/: __init__.py  boosting_model.py  ensemble_model.py  lstm_model.py  statistical_model.py  transformer_model.py
src/api/: main.py
src/common/: config.py  data_models.py  dependency_injection.py  event_bus.py  event_sourcing.py  monitoring.py  security.py
src/dashboard/: app.py  dashboard_api.py
src/data_pipeline/: __init__.py  alignment.py  arrow_pipeline.py  cleaning.py  ingestion.py  (+1 more)
tests/: __init__.py  test_advanced_features.py  test_api.py  test_chaos_engineering.py  test_features.py  test_fuzz_engine.py  test_infrastructure.py  test_orderbook.py  test_regression_backtest.py
(+94 files in other folders)
